header is ready

--- a/index.html
+++ b/index.html
@@ -4,14 +4,80 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Metric</title>
   <!-- favicon img -->
-  <link rel="shortcut icon" href="#" type="image/x-icon">
+  <link rel="shortcut icon" href="./static/svg/logo.svg" type="image/x-icon">
   <!-- css links -->
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <!-- header -->
+  <header class="header">
+    <div class="container header-container">
+      <nav class="nav">
+        <a href="#" class="site-logo"><img src="./static/svg/logo.svg" alt="site logo" class="logo"></a>
+        <div class="links">
+          <ul class="nav__list">
+            <li class="list__item">
+              <a href="#" class="item__link">
+                Features
+              </a>
+            </li>
+            <li class="list__item">
+              <a href="#" class="item__link">
+                Pricing
+              </a>
+            </li>
+            <li class="list__item">
+              <a href="#" class="item__link">
+                Customers
+              </a>
+            </li>
+          </ul>
+          <button class="nav-btn">
+            Sign Up
+          </button>
+        </div>
+      </nav>
+    </div>
+
+    <section class="hero">
+      <div class="container hero-container">
+        <div class="hero-content-section">
+          <h1 class="hero-title">
+            Grow Your Business 10x <br> with Metric
+          </h1>
+          <p class="hero-content">
+            The Metric Dashboard brings all of your <br> business insights under one roof. Revenue <br> metrics, social, integrations - everything.
+          </p>
+          <div class="buttons">
+            <button class="btn">
+              Sign Up
+            </button>
+            <a href="#" class="hero-btn">
+              Learn More
+          </a>
+          </div>
+        </div>
+        <img src="./static/imgs/png/hero-img.png" alt="chart img" class="hero-img" width="460">
+      </div>
+    </section>
+
+    <section class="features">
+      <div class="container features-container">
+        <h3 class="f-title">IN THE PRESS</h3>
+        <div class="press">
+          <img src="./static/svg/fast-company.svg" alt="press imgs" class="f-img">
+          <img src="./static/svg/forbes.svg" alt="press imgs" class="f-img">
+          <img src="./static/svg/techcrunch.svg" alt="press imgs" class="f-img">
+          <img src="./static/svg/wired.svg" alt="press imgs" class="f-img">
+          <img src="./static/svg/zdnet.svg" alt="press imgs" class="f-img">
+        </div>
+      </div>
+    </section>
+  </header>
+  <!-- header end -->
   
 </body>
 </html> 
