--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <section class="features">
       <div class="container features-container">
-        <h3 class="f-title">IN THE PRESS</h3>
+        <h4 class="f-title">IN THE PRESS</h4>
         <div class="press">
           <img src="./static/svg/fast-company.svg" alt="press imgs" class="f-img">
           <img src="./static/svg/forbes.svg" alt="press imgs" class="f-img">
@@ -80,6 +80,40 @@
   <!-- header end -->
   
   <!-- main -->
+  <main class="main">
+    <div class="container main-container">
+      <h2 class="main-title">
+        Sync Across All Devices
+      </h2>
+      <h3 class="main-subtitle">
+        Everything you need to make your business grow super fast!
+      </h3>
+      <div class="application">
+        <img src="./static/imgs/png/web.png" alt="web application" class="main-img">
+        <div class="main-content">
+          <img src="./static/svg/laptop.svg" alt="laptop icon" class="icon">
+          <h3 class="title">
+            Web Application
+          </h3>
+          <p class="content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Suspendisse varius enim in eros elementum <br> tristique. Consectetur adipiscing elit.
+          </p>
+        </div>
+      </div>
+      <div class="mobile">
+        <div class="main-content">
+          <img src="./static/svg/cloud.svg" alt=" cloud icon" class="icon">
+          <h3 class="title">
+            Mobile App
+          </h3>
+          <p class="content">
+            Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Suspendisse varius enim in eros elementum <br> tristique. Consectetur adipiscing elit.
+          </p>
+        </div>
+        <img src="./static/imgs/png/phone.png" alt="phone app" class="main-img">
+      </div>
+    </div>
+  </main>
   <!-- main end -->
 </body>
 </html> 
