--- a/index.html
+++ b/index.html
@@ -260,7 +260,23 @@
 
     </div>
     <div class="about">
-
+      <div class="container about-container">
+        <h2 class="about-title">
+              What People Say About Us
+        </h2>
+        <h3 class="about-subtitle">
+          “Donec ullamcorper nulla non metus auctor fringilla. Maecenas <br> sed diam eget risus varius blandit sit amet non magna. <br>       Maecenas faucibus mollis interdum.”
+        </h3>
+        <div>
+          <img src="./static/imgs/jpg/avatar.jpg" alt="avatar img" class="about-img">
+          <h4 class="name">
+            Kyle Killit
+          </h4>
+          <h5 class="job">
+            Designer at Tiempo Labs
+          </h5>
+        </div>
+      </div>
     </div>
   </main>
   <!-- main end -->
