main  section is ready

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
         </div>
       </div>
     </div>
+
     <div class="cards">
       <div class="container cards-container">
         <h2 class="main-title">
@@ -259,6 +260,7 @@
       </div>
 
     </div>
+
     <div class="about">
       <div class="container about-container">
         <h2 class="about-title">
@@ -276,6 +278,17 @@
             Designer at Tiempo Labs
           </h5>
         </div>
+      </div>
+    </div>
+
+    <div class="brands">
+      <div class="container brands-container">
+        <img src="./static/svg/johnson.svg" alt="brand companies logos">
+        <img src="./static/svg/tesla.svg" alt="brand companies logos">
+        <img src="./static/svg/ouya.svg" alt="brand companies logos">
+        <img src="./static/svg/chartboost.svg" alt="brand companies logos">
+        <img src="./static/svg/mammoth.svg" alt="brand companies logos">
+        <img src="./static/svg/neutrogena.svg" alt="brand companies logos">
       </div>
     </div>
   </main>
